--- a/src/styles/Patientprofile.css
+++ b/src/styles/Patientprofile.css
@@ -1,5 +1,5 @@
 
-/* css for both create profile and edit profile , copied form ai */
+/* css for patient profile , copied form ai */
 
 
 .container {
